syntax = "proto3";
import "Types.proto";
option java_package = "com.visitor.protocol";

/**
 * Messages that will be send by the server during a game
 */

//This will be send when a game state changes to notify the client to update display 
message UpdateGameStateP {
    GameStateP game = 1;
}

//This will be send when a player loses a game
message GameEnd {
    GameStateP game = 1;
    bool win = 2;
}

//This will be send when a player needs order a list of cards
message OrderCards {
    GameStateP game = 1;
    repeated CardP cardsToOrder = 2;
    string messageP = 3;
}

message SelectFrom {
    SelectFromType messageType = 1;
    GameStateP game = 2;
    Targeting targets = 3;
    string messageP = 4;
}

message SelectXValue {
    GameStateP game = 1;
    int32 maxXValue = 2;
    string messageP = 3;
}

message AssignDamage {
    GameStateP game = 1;
    string damageSource = 2;
    repeated string possibleTargets = 3;
    int32 totalDamage = 4;
    bool trample = 5;
}

message SelectKnowledge {
    GameStateP game = 1;
    repeated Knowledge knowledgeList = 2;
}


//Draft Messages
message PickCard {
    DraftState draft = 1;
    repeated CardP candidates = 2;
    string messageP = 3;
}

//TODO: Add draft state update message so you can instantly show that they picked the card.

message ServerGameMessage {
    oneof payload {
        UpdateGameStateP         updateGameStateP = 1;
        GameEnd                 gameEnd = 2;
        OrderCards              orderCards = 3;
        SelectFrom              selectFrom = 4;
        SelectXValue            selectXValue = 5;
        AssignDamage            assignDamage = 6;
        SelectKnowledge         selectKnowledge = 7;
        PickCard                pickCard = 8;
    }
}
